knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CET_Reference__c/CET_Reference__c.object-meta.xml
<CustomObject>
    <description>Used to track input for CET Agentforce use cases</description>
    <label>CET Reference</label>
    <nameField>
        <label>CET Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CET References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>