knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CET_Reference__c/fields/Requires_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Requires_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Attachment</label>
    <type>Checkbox</type>
</CustomField>