knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CET_Reference__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>CME (Continuing Medical Education)</fullName>
            </value>
            <value>
                <fullName>Credentials</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
            <value>
                <fullName>Documentation / Systems</fullName>
            </value>
            <value>
                <fullName>Malpractice</fullName>
            </value>
            <value>
                <fullName>Pay &amp; Compensation</fullName>
            </value>
            <value>
                <fullName>Schedules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>